--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,18 @@ repositories {
 
 ext {
     junitVersion = '5.7.1'
+    javaFakerVersion = '1.0.2'
+    selenideVersion = '5.21.0'
 }
 
 sourceCompatibility = 11
 targetCompatibility = 11
 
 dependencies {
-    testImplementation('com.codeborne:selenide:5.21.0')
+    testImplementation("com.codeborne:selenide:${selenideVersion}")
     testImplementation('org.slf4j:slf4j-simple:1.7.30')
 
+    testImplementation ("com.github.javafaker:javafaker:${javaFakerVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
