--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ ext {
     junitVersion = '5.7.1'
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 sourceCompatibility = 11
 targetCompatibility = 11
 
