--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.8.1"
 }
 
 group 'com.qacourse'
@@ -11,6 +12,10 @@ repositories {
 
 ext {
     junitVersion = '5.7.1'
+    aspecjweaverVersion = "1.9.6"
+    slf4jVersion = "1.7.30"
+    selenideVersion = '5.21.0'
+    allureVersion = "2.14.0"
 }
 
 tasks.withType(JavaCompile) {
@@ -21,12 +26,26 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 dependencies {
-    testImplementation('com.codeborne:selenide:5.21.0')
-    testImplementation('org.slf4j:slf4j-simple:1.7.30')
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+    testImplementation("com.codeborne:selenide:${selenideVersion}",
+            "io.qameta.allure:allure-selenide:${allureVersion}",
+            "org.aspectj:aspectjweaver:${aspecjweaverVersion}",
+            "org.slf4j:slf4j-simple:${slf4jVersion}",
+            "org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
+allure {
+    version = "${allureVersion}"
+    aspectjweaver = true
+    autoconfigure = true
+
+    useJUnit5 {
+        version = "${allureVersion}"
+    }
+}
+
+
 
 test {
     useJUnitPlatform()
