--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ ext {
     slf4jVersion = "1.7.30"
     selenideVersion = '5.21.0'
     allureVersion = "2.14.0"
+    pdfTestVersion = "1.5.1"
+    xlsTestVersion = "1.4.3"
+    zip4jVersion = "1.3.2"
+    hamcrestVersion = "1.3"
 }
 
 tasks.withType(JavaCompile) {
@@ -26,12 +30,15 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 dependencies {
-
     testImplementation("com.codeborne:selenide:${selenideVersion}",
             "io.qameta.allure:allure-selenide:${allureVersion}",
             "org.aspectj:aspectjweaver:${aspecjweaverVersion}",
             "org.slf4j:slf4j-simple:${slf4jVersion}",
-            "org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+            "org.junit.jupiter:junit-jupiter-api:${junitVersion}",
+            "com.codeborne:pdf-test:${pdfTestVersion}",
+            "com.codeborne:xls-test:${xlsTestVersion}",
+            "net.lingala.zip4j:zip4j:${zip4jVersion}",
+            "org.hamcrest:hamcrest-all:${hamcrestVersion}")
 
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
@@ -44,8 +51,6 @@ allure {
         version = "${allureVersion}"
     }
 }
-
-
 
 test {
     useJUnitPlatform()
